Добавила стили для страниц

--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -2,12 +2,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-  <title>Game</title>
+  <title>Тетрис</title>
   <link th:href="@{/css/game.css}" rel="stylesheet" />
 </head>
 <body>
 Игра
   <canvas width="320" height="640" id="game"></canvas>
-<script type="text/javascript" th:src="@{/js/game.js}"></script>
+  <script type="text/javascript" th:src="@{/js/game.js}"></script>
 </body>
 </html>
