--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -3,8 +3,8 @@
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
     <title>Тетрис. Регистрация.</title>
-    <!--<link rel="stylesheet" href="../static/css/login.css"/>-->
-    <link th:href="@{/css/login.css}" rel="stylesheet" />
+    <link rel="stylesheet" href="../static/css/login_style.css"/>
+    <!--<link th:href="@{/css/login_style.css}" rel="stylesheet" />-->
 </head>
 
 <body>
