--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,18 +4,18 @@
 <head>
     <title>Тетрис. Авторизация.</title>
     <!--<link rel="stylesheet" href="../static/css/login_style.css"/>-->
-    <link th:href="@{/css/login_style.css}" rel="stylesheet" />
+    <link media="all" th:href="@{/css/login_style.css}" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 <div class="login_form">
-    <div class="error" th:if="${param.error}">
+    <div th:class="error" th:if="${param.error}">
         <p>Неверный логин/пароль.<p>
     </div>
 
-    <div class="warning" th:if="${param.logout}">
+    <div th:class="warning" th:if="${param.logout}">
         <p>Вы вышли из профиля.<p>
     </div>
-        <form th:action="@{/login}" method="post" class="form-container">
+        <form th:action="@{/}" method="post" th:class="form-container">
             <p>«Тетрис»</br>Вход</p>
             <label for="username"> Логин: </label>
             <input type="text" name="username" id="username" placeholder="Логин"/>
@@ -23,8 +23,7 @@
             <label for="password"> Пароль:</label>
             <input type="password" name="password" id="password" placeholder="Пароль"/>
 
-            <input type="submit" value="Вход" class="submit_btn"/>
-            <a th:href="@{/registration}" class="btn">Регистрация</a>
+            <input type="submit" value="Вход" th:class="submit_btn"/>
         </form>
 </div>
 </body>
