--- a/src/main/resources/static/css/game.css
+++ b/src/main/resources/static/css/game.css
@@ -14,14 +14,43 @@ body {
 canvas {
     border: 1px solid black;
 }
-
-.endGame {
-    display: none;
+.overlay {
+    opacity: 0;
+    visibility: hidden;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .5);
+    z-index: 20;
+    transition: .3s all;
 }
 
-.openEndGame {
-    position: absolute;
-    display: block;
-    background-color: white;
-    border: 1px black solid;
+.modal {
+    opacity: 0;
+    visibility: hidden;
+    width: 100%;
+    max-width: 500px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 30;
+    box-shadow: 0 3px 10px -.5px rgba(0, 0, 0, .2);
+    text-align: center;
+    padding: 30px;
+    border-radius: 3px;
+    background-color: #fff;
+    transition: 0.3s all;
+}
+
+.active{
+    opacity: 1;
+    visibility: visible;
+}
+
+.saveButton{
+    margin-right: 20px;
+    margin-left: 210px;
 }
