--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -2,15 +2,22 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
     <head>
-        <title>Main Page</title>
+        <title>Тетрис. Главное меню</title>
+        <!--<link rel="stylesheet" href="../static/css/main.css"/>-->
         <link media="all" th:href="@{/css/main.css}" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <form th:action="@{/logout}" method="post">
-            <input type="submit" value="Sign Out"/>
-        </form>
+        <div class="about">
+
+         </div>
         <div class="menu-wrapper">
-            <h1 th:inline="text">Игра "Тетрис"</h1>
+            <form th:action="@{/}" method="post" >
+                <input type="submit" value="" class="aboutDev_btn"/>
+            </form>
+            <form th:action="@{/}" method="post" >
+                <input type="submit" value="" class="aboutSyst_btn"/>
+            </form>
+            <h1 th:inline="text">Игра «Тетрис»</h1>
             <div class="menu-items">
                 <a id="game-button" href=#><div class="menu-item">Играть</div></a>
                 <a th:href="@{/statistic}"><div class="menu-item">Статистика</div></a>
@@ -20,21 +27,26 @@
                 <!--<a sec:authorize="hasAuthority('ADMIN')" th:href="@{/statistic}" ><div class="menu-item">Настройки уровня сложности</div></a>-->
             </div>
         </div>
+        <form th:action="@{/logout}" method="post" >
+            <input type="submit" value="Выйти из профиля" class="logout_btn">
+        </form>
         <div id="level" class="modal">
             <svg class="modal_cross" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M23.954 21.03l-9.184-9.095 9.092-9.174-2.832-2.807-9.09 9.179-9.176-9.088-2.81 2.81 9.186 9.105-9.095 9.184 2.81 2.81 9.112-9.192 9.18 9.1z"/></svg>
-            <a th:href="@{/level/1}">Легкий</a>
-            <br>
-            <a th:href="@{/level/2}">Средний</a>
-            <br>
-            <a th:href="@{/level/3}">Сложный</a>
+            <a th:href="@{/level/1}"><div class="modal-item">Легкий</div>></a>
+            </br>
+            <a th:href="@{/level/2}"><div class="modal-item">Средний</div>></a>
+            </br>
+            <a th:href="@{/level/3}"><div class="modal-item">Сложный</div>></a>
+            </br>
         </div>
         <div id="game" class="modal">
             <svg class="modal_cross" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M23.954 21.03l-9.184-9.095 9.092-9.174-2.832-2.807-9.09 9.179-9.176-9.088-2.81 2.81 9.186 9.105-9.095 9.184 2.81 2.81 9.112-9.192 9.18 9.1z"/></svg>
-            <a th:href="@{/game/1}">Легкий</a>
-            <br>
-            <a th:href="@{/game/2}">Средний</a>
-            <br>
-            <a th:href="@{/game/3}">Сложный</a>
+            <a th:href="@{/game/1}"><div class="modal-item">Легкий</div></a>
+            </br>
+            <a th:href="@{/game/2}"><div class="modal-item">Средний</div></a>
+            </br>
+            <a th:href="@{/game/3}"><div class="modal-item">Сложный</div></a>
+            </br>
         </div>
         <div class="overlay" id="overlay-modal"></div>
         <script type="text/javascript"
