--- a/src/main/resources/templates/glasses.html
+++ b/src/main/resources/templates/glasses.html
@@ -3,12 +3,14 @@
         lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Стаканы</title>
+    <title>Тетрис. Стаканы</title>
+    <!--<link rel="stylesheet" href="../static/css/glasses.css"/>-->
+    <link media="all" th:href="@{/css/glasses.css}" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-<a th:href="@{/main}"><div class="menu-item">Вернуться на главную страницу</div></a>
+<a th:href="@{/main}"><div class="menu-item"></div></a>
     <button class="add">Добавить новый стакан</button>
-    <div class="add-modal" style="background-color: white;">
+    <div class="add-modal" >
             <label for="height"> Высота: </label>
             <input type="number" id="height" placeholder="Высота">
 
@@ -17,7 +19,7 @@
 
             <input type="submit" value="Сохранить" id="saveButton">
     </div>
-    <table>
+    <table class="table">
         <thead>
         <tr>
             <th>Номер</th>
@@ -30,8 +32,8 @@
             <td th:text="${glass.getId()}"></td>
             <td th:text="${glass.getHeight()}"></td>
             <td th:text="${glass.getWidth()}"></td>
-            <td class="edit"><a th:href="@{/editGlass/{id}(id=${glass.getId()})}">Редактировать</a></td>
-            <td class="delete"><a th:href="@{/deleteGlass/{id}(id=${glass.getId()})}">Удалить</a></td>
+            <td class="edit"><a th:href="@{/editGlass/{id}(id=${glass.getId()})}"></a></td>
+            <td class="delete"><a th:href="@{/deleteGlass/{id}(id=${glass.getId()})}"></a></td>
         </tr>
         </tbody>
     </table>
