Отредактировала стили страницы стаканов

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -32,11 +32,11 @@
         </form>
         <div id="level" class="modal">
             <svg class="modal_cross" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M23.954 21.03l-9.184-9.095 9.092-9.174-2.832-2.807-9.09 9.179-9.176-9.088-2.81 2.81 9.186 9.105-9.095 9.184 2.81 2.81 9.112-9.192 9.18 9.1z"/></svg>
-            <a th:href="@{/level/1}"><div class="modal-item">Легкий</div>></a>
+            <a th:href="@{/level/1}"><div class="modal-item">Легкий</div></a>
             </br>
-            <a th:href="@{/level/2}"><div class="modal-item">Средний</div>></a>
+            <a th:href="@{/level/2}"><div class="modal-item">Средний</div></a>
             </br>
-            <a th:href="@{/level/3}"><div class="modal-item">Сложный</div>></a>
+            <a th:href="@{/level/3}"><div class="modal-item">Сложный</div></a>
             </br>
         </div>
         <div id="game" class="modal">
