--- a/src/main/resources/templates/glasses.html
+++ b/src/main/resources/templates/glasses.html
@@ -3,52 +3,6 @@
         lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Стаканы</title>
-    <style>
-        .overlay {
-            opacity: 0;
-            visibility: hidden;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, .5);
-            z-index: 20;
-            transition: .3s all;
-        }
-
-        .modal {
-            opacity: 0;
-            visibility: hidden;
-            width: 100%;
-            max-width: 500px;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            z-index: 30;
-            box-shadow: 0 3px 10px -.5px rgba(0, 0, 0, .2);
-            text-align: center;
-            padding: 30px;
-            border-radius: 3px;
-            background-color: #fff;
-            transition: 0.3s all;
-        }
-        .modal_cross {
-            width: 15px;
-            height: 15px;
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            fill: #444;
-            cursor: pointer;
-        }
-        .active{
-            opacity: 1;
-            visibility: visible;
-        }
-    </style>
     <title>Тетрис. Стаканы</title>
     <!--<link rel="stylesheet" href="../static/css/glasses.css"/>-->
     <link media="all" th:href="@{/css/glasses.css}" rel="stylesheet" type="text/css"/>
@@ -56,15 +10,15 @@
 <body>
 <a th:href="@{/main}"><div class="menu-item"></div></a>
     <button class="add">Добавить новый стакан</button>
-    <div class="modal" style="background-color: white;">
+    <div class="modal" style="   background-color: white;">
         <svg class="modal_cross" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M23.954 21.03l-9.184-9.095 9.092-9.174-2.832-2.807-9.09 9.179-9.176-9.088-2.81 2.81 9.186 9.105-9.095 9.184 2.81 2.81 9.112-9.192 9.18 9.1z"/></svg>
-        <label for="height"> Высота: </label>
-            <input type="number" id="height" placeholder="Высота">
-            <br>
-            <label for="width"> Ширина:</label>
-            <input type="number" id="width" placeholder="Ширина">
-            <br>
-            <input type="submit" value="Сохранить" id="saveButton">
+        <label for="height" class="l_height"> Высота: </label>
+        <input type="number" id="height" placeholder="Высота" class="in_height">
+        <br>
+        <label for="width" class="l_width"> Ширина:</label>
+        <input type="number" id="width" placeholder="Ширина" class="in_width">
+        <br>
+        <input type="submit" value="Сохранить" id="saveButton">
     </div>
     <div class="overlay" id="overlay-modal"></div>
     <table class="table">
