--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,7 +16,7 @@
         <p>Вы вышли из профиля.<p>
     </div>
         <form th:action="@{/}" method="post" th:class="form-container">
-            <p>«Тетрис»</br>Вход</p>
+            <p>«Тетрис»</p>
             <label for="username"> Логин: </label>
             <input type="text" name="username" id="username" placeholder="Логин"/>
 
